Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,14 +29,20 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a name="welcome-to-numbay" class="anchor" href="#welcome-to-numbay"><span class="octicon octicon-link"></span></a>Welcome to NumBay.</h3>
+<a name="welcome-to-nombay" class="anchor" href="#welcome-to-nombay"><span class="octicon octicon-link"></span></a>Welcome to NomBay.</h3>
 
-<p>NumBay.net へようこそ。</p>
+<p>NomBay.net へようこそ。</p>
 
 <h2>
 <a name="whats-numbay" class="anchor" href="#whats-numbay"><span class="octicon octicon-link"></span></a>What's NumBay</h2>
 
-<p>NumBayは写真から酔っぱらいレベルを判定するアプリです。</p>
+<p>NomBayで写真から酔っぱらいレベルを判定して盛り上がりましょう!</p>
+
+<p>飲んでる時に友達の酔っぱらいレベルを写真を撮って測定したら盛り上がる事間違い無し!!</p>
+
+<p>皆で写真を撮れば、酔っぱらいレベルが上昇して更に盛り上がる!</p>
+
+<p>酔っぱらいレベルを判定した写真を立地に加工して、共有して友達との時間を楽しもう!!</p>
         </section>
 
         <aside id="sidebar">
