--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
   <body>
     <header>
       <div class="inner">
-        <h1>NomBay</h1>
+              <h1>NomBay</h1>
+              <small>         
+              <img src="Icon-60@2x.png" alt="App Icon" height="100" width="100">             
+              </small>
         <h2>PHOTO HACK DAY JAPAN</h2>
         <a href="https://github.com/hurutoriya/drinky" class="button"><small>View project on</small>GitHub</a>
       </div>
