--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
     <header>
       <div class="inner">
               <h1>NomBay</h1>
-              <small>         
-              <img src="Icon-60@2x.png" alt="App Icon" height="100" width="100">             
-              </small>
         <h2>PHOTO HACK DAY JAPAN</h2>
         <a href="https://github.com/hurutoriya/drinky" class="button"><small>View project on</small>GitHub</a>
       </div>
@@ -52,7 +49,9 @@
           
           </section>
 
-        <aside id="sidebar">
+          <aside id="sidebar">
+
+          <img src="https://lh3.googleusercontent.com/-yzIgjdx6ER0/Uwlw09jVwfI/AAAAAAAABL8/Z6-ixY4ucQE/s133-no/Icon-60%25402x.png" al1t="">
           <a href="https://github.com/hurutoriya/drinky/zipball/master" class="button">
             <small>Download</small>
             .zip file
